- small fixes for controllers - rewrote code for creating script for DB filling - updated app configs - add fillDB.sql script with test data